<resources>
    <!--app name-->
    <string name="app_name">BC Eats 2.0</string>

    <!--Login-->
    <string name="welcome_txt">Welcome to BC Eats 2.0</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--Registration-->
    <string name="registration_username_entry_tag">Enter your username:</string>
    <string name="registration_phonenumber_entry_tag">Phone Number:</string>
    <string name="registration_confirm_entry_tag">Confirmation Code:</string>

    <!-- navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">header subtitle left empty for now</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_listings">My Listings</string>
    <string name="menu_account">Account</string>
    <string name="menu_exit">Logout</string>

    <!--To be determined for deletion-->
    <string name="home_second">Home Second</string>

    <!--Home-->
    <string name="home_date">Current Date</string>
    <string name="home_no_posts">There are no new posts</string>

    <!--Account-->
    <string name="account_username_label">Username</string>
    <string name="account_password_label">Password</string>
    <string name="account_phone_label">Phone</string>
    <string name="account_header_desc">Account avatar</string>

    <!--Generic btns-->
    <string name="save_btn">Save</string>
    <string name="edit_btn">Edit</string>
    <string name="cancel_btn">Cancel</string>
    <string name="delete_btn">Delete</string>
    <string name="exit_btn">Exit</string>
    <string name="post_btn">Post</string>
    <string name="submit_btn">Submit</string>


    <!--Image content descriptions -->
    <string name="img_content_desc">meal listing image</string>
    <string name="img_btn_desc">camera image button</string>


    <!--Edit Post -->
    <string name="title_activity_edit_post">EditPostActivity</string> <!--this is for the manifest file -->
    <string name="edit_post_app_title">Edit Post</string>


    <!--Create Post-->
    <string name="title_activity_create_post">CreatePostActivity</string> <!--this is for the manifest file -->
    <string name="post_app_title">Create a Post</string>
    <string name="post_title_label">Food title</string>
    <string name="post_building_label">Building</string>
    <string name="post_room_number_label">Room no.</string>
    <string name="post_room_number_hint">eg. 222</string>
    <string name="post_time_limit_label">Available until:</string>
    <string name="post_food_desc_label">Enter additional information (optional)</string>
    <string name="dialog_title">Delete Post?</string>

    <!--Deleting Alert Dialog-->
    <string name="dialog_message">Are you sure you want to delete this posting?</string>
    <string name="camera_unavailable">Camera is unavailable</string>

    <!--Camera/Gallery -->
    <string name="file_save_error">Error while saving file</string>
    <string name="placeholdertext">Place holder text.</string>

    <!--Placeholder text-->
    <string-array name="buildings_array">
        <item>C-Building</item>
        <item>L-Building</item>
        <item>D-Building</item>
        <item>B-Building</item>
        <item>A-Building</item>
        <item>R-Building</item>
        <item>N-Building</item>
        <item>T-Building</item>
        <item>S-Building</item>
    </string-array>

</resources>
