<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_listings"
            android:icon="@drawable/ic_menu_fastfood"
            android:title="@string/menu_listings" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_exit_to_app"
            android:title="@string/menu_exit" />
    </group>
</menu>
