<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.post.PostActivity"
    tools:showIn="@layout/activity_post">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/text_margin"
        android:padding="@dimen/text_padding">

        <TextView
            android:id="@+id/post_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_text"
            android:text="@string/post_food_title_label" />

        <EditText
            android:id="@+id/post_food_title_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/post_widget_bottom_margin"
            android:hint="@string/post_food_title_label"
            android:backgroundTint="@color/hintGrey"
            android:textSize="@dimen/medium_text"
            android:layout_below="@id/post_title_label" />

        <TextView
            android:id="@+id/post_building_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_building_label"
            android:textSize="@dimen/large_text"
            android:layout_below="@id/post_food_title_et" />

        <Spinner
            android:id="@+id/post_spinner"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/hintGrey"
            android:layout_below="@id/post_building_label"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/post_room_label"
            android:layout_width="@dimen/special_edit_text_width"
            android:layout_height="wrap_content"
            android:text="@string/post_room_number_label"
            android:textSize="@dimen/large_text"
            android:layout_below="@id/post_food_title_et"
            android:layout_alignRight="@id/post_building_label"
            android:layout_alignParentRight="true" />

        <EditText
            android:id="@+id/post_room_et"
            android:layout_width="@dimen/special_edit_text_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/post_widget_bottom_margin"
            android:hint="@string/post_room_number_hint"
            android:textSize="@dimen/medium_text"
            android:backgroundTint="@android:color/transparent"
            android:drawableRight="@drawable/ic_arrow_drop_down"
            android:layout_below="@id/post_room_label"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/post_spinner" />

        <TextView
            android:id="@+id/post_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/post_time_limit_label"
            android:textSize="@dimen/large_text"
            android:layout_below="@id/post_room_et" />

        <TimePicker
            android:id="@+id/post_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/post_widget_bottom_margin"
            android:timePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_below="@id/post_time_label" />

        <EditText
            android:id="@+id/post_desc_et"
            android:layout_width="match_parent"
            android:layout_height="150dip"
            android:gravity="left|top"
            android:hint="@string/post_food_desc_label"
            android:inputType="textMultiLine|textCapSentences"
            android:padding="5dp"
            android:layout_marginBottom="@dimen/post_widget_bottom_margin"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:textSize="@dimen/medium_text"
            android:background="@drawable/edit_text_border"
            android:layout_below="@id/post_time_picker"/>

        <Button
            android:id="@+id/post_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/post_widget_bottom_margin"
            android:hint="@string/post_btn"
            android:textSize="@dimen/medium_text"
            android:stateListAnimator="@null"
            android:textColorHint="@color/white"
            android:background="@drawable/round_buttons"
            android:layout_below="@id/post_desc_et"
            android:layout_alignParentLeft="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cancel_btn"
            android:textSize="@dimen/medium_text"
            android:stateListAnimator="@null"
            android:textColorHint="@color/white"
            android:background="@drawable/round_buttons"
            android:layout_below="@id/post_desc_et"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>